# ator-protocol

./: .gitignore  .gitlab-ci.yml  .travis.yml  Cargo.toml  ChangeLog  Doxyfile.in  Makefile.am  README.md  ReleaseNotes  anon-dns  anon_to_onion_map.txt  configure.ac
.github/actions/build-and-push/: action.yml
.github/actions/build-debian-package/: action.yml
.github/actions/build-debian-source/: action.yml
.github/actions/build-linux/: action.yml
.github/actions/build-macos/: action.yml
.github/actions/deploy/: action.yml
.github/workflows/: build-debian.yml  build-docker.yml  build-linux.yml  build-macos.yml  build-packages.yml  build-windows.yml  build.yml  debian-repo-deploy.yml  debian.yml  deploy-action.yml  deploy-grafana.yml  deploy.yml  dev-build-and-deploy.yml  dev-build-and-push.yml  dev-deploy.yml  docker-build-master.yml  docker-build-pr.yml  docker-build-tag.yml  docker-build.yml  live-build-and-deploy.yml  live-build-and-push.yml  live-deploy.yml  stage-build-and-deploy.yml  stage-build-and-push.yml  stage-deploy-monitoring.yml  stage-deploy.yml  update-geoip.yml
changes/: anyone-hosts-autoupdate  bug40465  bug40805  bug40808  bug40827  bug40828  bug40834  bug40841  bug40842  bug40855  bug40858  bug40862  bug40869  bug40876  bug40878  bug40884  bug40897  bug40910  bug40911  bug40922  bug40933  bug41215  fallbackdirs-2023-07-12  fallbackdirs-2023-07-26  fallbackdirs-2023-08-04  fallbackdirs-2023-08-23  fallbackdirs-2023-08-30  fallbackdirs-2023-09-18  fallbackdirs-2023-09-25  fallbackdirs-2023-11-03  fallbackdirs-2023-11-09  fallbackdirs-2023-12-08  fallbackdirs-2024-04-10  fallbackdirs-2024-06-06  fallbackdirs-2026-02-12  fallbackdirs-2026-03-25  geoip-2023-07-12  geoip-2023-07-26  geoip-2023-08-04  geoip-2023-08-23  (+54 more)
contrib/: README  include.am
contrib/client-tools/: anonify
contrib/dirauth-tools/: add-tor
contrib/operator-tools/: anon-exit-notice.html  tor.logrotate.in
contrib/or-tools/: exitlist
contrib/win32build/: anon-mingw.nsi.in  anon.nsi.in  tor-mingw.nsi.in  tor.nsi.in
debian/: README.Debian  anon-geoipdb.install  anon-geoipdb.lintian-overrides  anon-instance-create  anon-instance-create.8.txt  anon-service-defaults-anonrc  anon-service-defaults-anonrc-instances  anon.NEWS  anon.apparmor-profile  anon.apparmor-profile.abstraction  anon.cron.weekly  anon.default  anon.dirs  anon.docs  anon.init  anon.install  anon.links  anon.lintian-overrides  anon.logrotate  anon.maintscript  anon.manpages  anon.postinst  anon.postrm  anon.preinst  anon.runit  changelog  config  control  copyright  rules  source.lintian-overrides  templates  tor-instance-create  tor-instance-create.8.txt  tor-service-defaults-torrc-instances  tor.apparmor-profile.abstraction  tor.default  tor.docs  tor.init  tor.install  (+6 more)
debian/anon.runscript/: run
debian/misc/: README  backport  build-anon-sources  build-tor-sources  new-tor-release  new-tor-release-prepare
debian/systemd/: anon-generator  anon@.service  anon@default.service  tor-generator  tor@.service  tor@default.service
debian/tests/: control  download-release-file  setup-onion-service
debian/tor.runscript/: run
doc/: RELEASE.md  anonrc_format.txt  anyone_hosts_format.txt  include.am  state-contents.txt
doc/HACKING/: CircuitPaddingDevelopment.md  CircuitPaddingQuickStart.md  HelpfulTools.md  HowToReview.md  Module.md  Rust.md
doc/man/: anon-gencert.1.txt  anon-print-ed-signing-cert.1.txt  anon-resolve.1.txt  anon.1.txt  anonify.1.txt  tor.1.txt
doc/release/: windows-signing-with-azure-kv.md
docker/: .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.local  README.md  docker-compose.yaml  extract-multi-arch.sh
docker/config/: anonrc-example  torrc  torrc-example
docker/dummy-dirs/: auth_dirs.inc
docker/scripts/: docker-entrypoint
docker/tests/: anonrc-dev  anonrc-hs-dev  anyone_hosts  anyone_hosts-legacy  default-dns-mappings
operations/: README.md  admin-ui-ca.crt  anon-da-node-dev.hcl  anon-da-node-live.hcl  anon-da-node-stage.hcl  anon-debian-repo.hcl  anon-monioring-stage.hcl  anon-relays-stage.hcl  ator-da-node-dev.hcl  create-wallet.js  gencert-101relay.sh  gencert.sh  grafana.hcl  package.json  run-gen-upload-cert-101relays.sh  run-gen-upload-cert.sh  run-gencert.sh  test-data-101relays.sh  uploadcert-101relays.sh  uploadcert.sh  uploadsecrets-101relays.sh  uploadsecrets.sh
scripts/: README
scripts/ci/: ci-driver.sh  copy-auth-dirs.sh  files_renamed_after_fork_with_code.diff  rename-from-anon.py  rename-to-anon.py  update-env.sh  update-version.sh
scripts/coccinelle/: check_cocci_parse.sh
scripts/codegen/: fuzzing_include_am.py  get_mozilla_ciphers.py
scripts/git/: git-list-tor-branches.sh  git-pull-all.sh
scripts/maint/: add_c_file.py  checkOptionDocs.pl.in  checkShellScripts.sh  checkSpace.pl  code-format.sh  format_changelog.py  lintChanges.py  run_check_subsystem_order.sh  update_versions.py
scripts/test/: chutney-git-bisect.sh
src/: include.am  mainpage.md
src/app/: include.am
src/config/: README  anonrc.minimal.in  anonrc.minimal.in-staging  anonrc.sample.in  geoip  include.am
src/core/: include.am
src/ext/equix/: CMakeLists.txt  Cargo.toml  build.rs
src/ext/equix/hashx/src/: compiler_a64.c  program.c  virtual_memory.c
src/ext/equix/src/: lib.rs
src/test/: bench.c  ed25519_exts_ref.py  hs_build_address.py  hs_ntor_ref.py  include.am  rng_test_helpers.c  test-network.sh  test.c  test.h  test_addr.c  test_address_set.c  test_anyone_hosts_update.c  test_buffers.c  test_bwmgt.c  test_cell_formats.c  test_channelpadding.c  test_circuitpadding.c  test_cmdline.sh  test_config.c  test_conflux_pool.c  test_congestion_control.c  test_crypto.c  test_crypto_rng.c  test_dir.c  test_dos.c  test_entryconn.c  test_entrynodes.c  test_guardfraction.c  test_helpers.c  test_hs_client.c  test_hs_common.c  test_hs_control.c  test_hs_descriptor.c  test_hs_ob.c  test_hs_service.c  test_include.py  test_include.sh  test_key_expiration.sh  test_keygen.sh  test_mainloop.c  (+18 more)
src/tools/: anon-gencert.c  anon-resolve.c  include.am  tor_runner.c
src/win32/: orconfig.h
(+355 files in other folders)
